package seedu.duke.command;

public interface Command {
    void execute();
}
